<resources>
    <string name="app_name">Virginie B.</string>
    <string name="button">Button</string>
    <string name="logIn">Log In</string>
    <string name="ok">OK</string>
    <string name="logoIsen">ISEN</string>
    <string name="identifier">Identifier</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome</string>
    <string name="cycleVie">Cycle de Vie</string>
    <string name="sauvegarde">Sauvegarde</string>
    <string name="permissions">Permissions</string>
    <string name="webservices">Webservices</string>
    <string name="logOut">LOG OUT</string>
    <string name="storage">Storage</string>
    <string name="lastName">Last Name</string>
    <string name="firstName">First Name</string>
    <string name="dateOfBirth">Date Of Birth</string>
    <string name="reading">Reading</string>
</resources>
