<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/isen"
        android:layout_width="187dp"
        android:layout_height="73dp"
        android:layout_marginBottom="300dp"
        android:contentDescription="@string/logoIsen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075"
        app:srcCompat="@drawable/isen" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="198dp"
        android:layout_height="56dp"
        android:text="@string/welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.182" />

    <ImageView
        android:id="@+id/buttonCycleDeVie"
        android:layout_width="116dp"
        android:layout_height="112dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/cycleVie"
        app:layout_constraintEnd_toStartOf="@+id/buttonSauvegarde"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        app:srcCompat="@drawable/cyclevie" />

    <ImageView
        android:id="@+id/buttonSauvegarde"
        android:layout_width="116dp"
        android:layout_height="112dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/sauvegarde"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonCycleDeVie"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        app:srcCompat="@drawable/sauvegarde" />

    <ImageView
        android:id="@+id/buttonPermissions"
        android:layout_width="116dp"
        android:layout_height="112dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/permissions"
        app:layout_constraintEnd_toStartOf="@+id/buttonWebservices"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cycleVie"
        app:srcCompat="@drawable/permissions" />

    <ImageView
        android:id="@+id/buttonWebservices"
        android:layout_width="116dp"
        android:layout_height="112dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/webservices"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonPermissions"
        app:layout_constraintTop_toBottomOf="@+id/sauvegarde"
        app:srcCompat="@drawable/webservices" />

    <TextView
        android:id="@+id/cycleVie"
        android:layout_width="133dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/cycleVie"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/buttonCycleDeVie"
        app:layout_constraintHorizontal_bias="0.411"
        app:layout_constraintStart_toStartOf="@+id/buttonCycleDeVie"
        app:layout_constraintTop_toBottomOf="@+id/buttonCycleDeVie" />

    <TextView
        android:id="@+id/sauvegarde"
        android:layout_width="125dp"
        android:layout_height="39dp"
        android:layout_marginTop="8dp"
        android:text="@string/sauvegarde"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/buttonSauvegarde"
        app:layout_constraintStart_toStartOf="@+id/buttonSauvegarde"
        app:layout_constraintTop_toBottomOf="@+id/buttonSauvegarde" />

    <TextView
        android:id="@+id/permissions"
        android:layout_width="139dp"
        android:layout_height="29dp"
        android:layout_marginTop="8dp"
        android:text="@string/permissions"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/buttonPermissions"
        app:layout_constraintHorizontal_bias="0.304"
        app:layout_constraintStart_toStartOf="@+id/buttonPermissions"
        app:layout_constraintTop_toBottomOf="@+id/buttonPermissions" />

    <TextView
        android:id="@+id/webservices"
        android:layout_width="139dp"
        android:layout_height="29dp"
        android:layout_marginTop="8dp"
        android:text="@string/webservices"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/buttonWebservices"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="@+id/buttonWebservices"
        app:layout_constraintTop_toBottomOf="@+id/buttonWebservices" />

    <Button
        android:id="@+id/logOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="104dp"
        android:background="#F44336"
        android:text="@string/logOut"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>